--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -12,3 +12,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.app-wrapper {
+  padding: 50px;
+}
+
+.app-wrapper > * {
+  margin-bottom: 20px;
+}
