--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -20,3 +20,11 @@ body {
 .app-wrapper > * {
   margin-bottom: 20px;
 }
+
+.checkbox-wrapper {
+  display: flex;
+}
+
+.checkbox-wrapper > * {
+  margin: 0 20px 20px 0;
+}
